--- a/resume.html
+++ b/resume.html
@@ -77,19 +77,19 @@
       <section id="share">
         <h3>简历下载</h3>
         <nav class="buttons">
-          <a class="button github" href="" target="_blank">
+          <a class="button github" href="https://github.com/zystyle/resume" target="_blank">
             <em>Download on</em> <strong>GitHub</strong>
           </a>
           <a
             class="button one"
-            href=""
+            href="https://github.com/zystyle/resume"
             target="_blank"
             >
             <em>Download on</em> <strong>GitHub</strong>
           </a>
           <a
             class="button two"
-            href=""
+            href="https://github.com/zystyle/resume"
             target="_blank"
             >
             <em>Download on</em> <strong>GitHub</strong>
