--- a/resume.html
+++ b/resume.html
@@ -49,7 +49,7 @@
         </div>
         <!-- Red Progress Bar -->
         <div class="progress">
-          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">  JQueryMYSQL / SQL SERVER / Oracle</div>
+          <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"> JQuery / MYSQL / SQL Server / Oracle</div>
         </div>
         <div class="progress">
           <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%">  JAVASCRIPT / Bootstrap</div>
